Normalize line endings for all files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CircuitAura Electronics - Innovating the Future of Electronics</title>
     <meta name="description" content="Smart Solutions, Real Innovation. Explore cutting-edge electronics, educational kits, and learning resources for tech enthusiasts." />
     <meta name="author" content="CircuitAura Electronics" />
-    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="icon" href="/favicon.ico" type="image/png" />
 
     <meta property="og:title" content="CircuitAura Electronics - Innovating the Future" />
     <meta property="og:description" content="Smart Solutions, Real Innovation. Your trusted source for electronics and educational kits." />
